--- a/src/sass/modules/footer/footer.scss
+++ b/src/sass/modules/footer/footer.scss
@@ -1,23 +1,23 @@
 $footer-color: $color-white !default; //Override this variable to change the color of your footer
 
 .app-footer {
-  background-color: rgba($footer-color, .95);
-  box-shadow: 0 -2px 30px 0 rgba($color-shadow, .16);
-  float: left;
-  max-width: 100%;
-  padding: 1rem;
-  position: absolute;
-  left: 0;
-  width: 100%;
+	background-color: rgba($footer-color, 0.95);
+	box-shadow: 0 -2px 30px 0 rgba($color-shadow, 0.16);
+	float: left;
+	max-width: 100%;
+	padding: 1rem;
+	position: absolute;
+	left: 0;
+	width: 100%;
 
-  &.fixed {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
+	&.fixed {
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
 
-  .row.no-padding {
-    max-width: calc(1200px - 2rem);
-  }
+	.row.no-padding {
+		max-width: calc(1200px - 2rem);
+	}
 }
