--- a/src/sass/example-page/prism.scss
+++ b/src/sass/example-page/prism.scss
@@ -71,17 +71,19 @@ $tablet:        "all and (min-width: 40em)" !default;
 }
 
 .page-header {
-  // background-color: $color-gray-3;
+	// background-color: $color-gray-3;
 	background-color: #393e41;
 	line-height: 1.7rem;
-  text-align: center;
-  padding: 2rem 1rem;
-  margin-bottom: 1rem;
-  h1 {
+	text-align: center;
+	padding: 2rem 1rem;
+	margin-bottom: 1rem;
+
+	h1 {
 		color: $color-white;
-    font-weight: $font-weight-semibold;
-    margin: 0;
-  }
+		font-weight: $font-weight-semibold;
+		margin: 0;
+	}
+
 	.button {
 		position: relative;
 		top: -2.1rem;
@@ -91,15 +93,15 @@ $tablet:        "all and (min-width: 40em)" !default;
 code[class*="language-"],
 pre[class*="language-"] {
 	border-radius: 5px;
-  color: $color-white;
-  font-family: monaco, 'Inconsolata', sans-serif;
-  font-size: 0.8rem;
-  font-weight: $font-weight-semibold;
+	color: $color-white;
+	font-family: monaco, 'Inconsolata', sans-serif;
+	font-size: 0.8rem;
+	font-weight: $font-weight-semibold;
 	display: none;
-  padding: 0;
-  top: 0;
-  position: relative;
-  line-height: 1.4rem;
+	padding: 0;
+	top: 0;
+	position: relative;
+	line-height: 1.4rem;
 
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
@@ -109,6 +111,7 @@ pre[class*="language-"] {
 	-moz-hyphens: none;
 	-ms-hyphens: none;
 	hyphens: none;
+
 	&.show {
 		display: block;
 	}
@@ -126,12 +129,14 @@ pre[class*="language-"] {
 		border-radius: 3px;
 		color: $gray-900c;
 		line-height: 1rem;
-		opacity: .9;
+		opacity: 0.9;
 		padding: 0.2rem 0.2rem 0.3rem;
 		position: absolute;
-		top: 0.5rem; right: 0.5rem;
+		top: 0.5rem;
+		right: 0.5rem;
 	}
 }
+
 pre.language-scss {
 	border-radius: 0.3rem 0.3rem 0.3rem 0.3rem;
 }
@@ -141,8 +146,8 @@ pre.language-scss {
 // }
 
 pre.language-html:before {
-  content: "html";
-  background-color: $color-gray-2;
+	content: "html";
+	background-color: $color-gray-2;
 }
 
 pre.language-scss:before {
@@ -162,13 +167,13 @@ pre.language-css:before {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background-color: rgba($code-toggle, .9);
+	background-color: rgba($code-toggle, 0.9);
 }
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
-	padding: .1em;
-	border-radius: .3em;
+	padding: 0.1em;
+	border-radius: 0.3em;
 	white-space: normal;
 }
 
@@ -184,7 +189,7 @@ pre[class*="language-"] {
 }
 
 .namespace {
-	opacity: .7;
+	opacity: 0.7;
 }
 
 .token.property {
@@ -238,6 +243,7 @@ pre[class*="language-"] {
 .token.bold {
 	font-weight: $font-weight-bold;
 }
+
 .token.italic {
 	font-style: italic;
 }
@@ -257,7 +263,7 @@ pre.line-numbers > code {
 }
 
 .line-numbers .line-numbers-rows {
-	background-color: rgba($gray-700c, .8);
+	background-color: rgba($gray-700c, 0.8);
 	padding: 1rem 0;
 	pointer-events: none;
 	position: absolute;
@@ -296,74 +302,80 @@ pre.line-numbers > code {
 
 //code toggle
 .code-toggle {
-  background-color: $color-gray-3;
-  border-radius: 0 0 5px 5px;
-  cursor: pointer;
-  display: block;
-  width: 100%;
-  padding: 0.5rem 0;
-  text-align: center;
-  transition: background-color .2s ease-in-out;
+	background-color: $color-gray-3;
+	border-radius: 0 0 5px 5px;
+	cursor: pointer;
+	display: block;
+	width: 100%;
+	padding: 0.5rem 0;
+	text-align: center;
+	transition: background-color 0.2s ease-in-out;
 
 	.grid & {
 		border-radius: 5px;
 		padding: $space-xs;
 	}
 
-  .icon--code {
-    background-image: url(../../img/icon--code_light.svg);
-    width: 16px;
-    height: 16px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    display: inline-block;
-    margin: 0 0.1rem -0.1rem 0;
-  }
+	.icon--code {
+		background-image: url(../../img/icon--code_light.svg);
+		width: 16px;
+		height: 16px;
+		background-size: 100%;
+		background-repeat: no-repeat;
+		display: inline-block;
+		margin: 0 0.1rem -0.1rem 0;
+	}
 
-  &:hover {
-    background-color: $code-toggle;
-    &:after { color: $color-white; }
-    .icon--code {
-      background-image: url(../../img/icon--code.svg);
-    }
-  }
+	&:hover {
+		background-color: $code-toggle;
 
-  &:after {
-    content: "SHOW CODE";
+		&:after { color: $color-white; }
+
+		.icon--code {
+			background-image: url(../../img/icon--code.svg);
+		}
+	}
+
+	&:after {
+		content: "SHOW CODE";
 		font-weight: $font-weight-semibold;
-    color: $color-text;
-  }
+		color: $color-text;
+	}
 
-  &.is-open {
-    background-color: $code-toggle;
-    border-radius: 5px 5px 0 0;
-    .icon--code { background-image: url(../../img/icon--code.svg); }
-    &:after {
-      color: $color-white;
-      content: "HIDE CODE";
+	&.is-open {
+		background-color: $code-toggle;
+		border-radius: 5px 5px 0 0;
+
+		.icon--code { background-image: url(../../img/icon--code.svg); }
+
+		&:after {
+			color: $color-white;
+			content: "HIDE CODE";
 			font-weight: $font-weight-semibold;
-    }
-  }
+		}
+	}
 }
 
 .group-open {
-  +.language-scss {
-    display: block;
-  }
-  +.language-scss code[class*="language-"] {
-    display: block;
-  }
+	+.language-scss {
+		display: block;
+	}
+
+	+.language-scss code[class*="language-"] {
+		display: block;
+	}
 }
 
 .code {
-  display: none;
-  overflow: hidden;
-   &.show {
-     display: block;
-   }
+	display: none;
+	overflow: hidden;
+
+	&.show {
+		display: block;
+	}
 }
 
 code, pre {
-white-space:pre-wrap !important;
-word-wrap:break-word !important;
+	white-space: pre-wrap !important;
+	word-wrap: break-word !important;
 }
