--- a/src/sass/modules/spinner/spinner.scss
+++ b/src/sass/modules/spinner/spinner.scss
@@ -5,79 +5,84 @@ $spinner-small: 32px; //2rem
 $spinner-button: 24px; //1.2rem;
 
 .dash-spinner {
-  @include animation(rotation 1250ms infinite cubic-bezier(0.75, 0.28, 0.44, 0.82));
-  position: relative;
-  border-radius: 100%;
-  border: 6px solid rgba($spinner-color, .15);
-  border-top: 6px solid rgba($spinner-color, 1);
-  float: left;
-  height: $spinner-default;
-  width: $spinner-default;
-  top: calc(50% - (#{$spinner-default}/2));
-  left: calc(50% - (#{$spinner-default}/2));
+	@include animation(rotation 1250ms infinite cubic-bezier(0.75, 0.28, 0.44, 0.82));
+	position: relative;
+	border-radius: 100%;
+	border: 6px solid rgba($spinner-color, 0.15);
+	border-top: 6px solid rgba($spinner-color, 1);
+	float: left;
+	height: $spinner-default;
+	width: $spinner-default;
+	top: calc(50% - (#{$spinner-default}/2));
+	left: calc(50% - (#{$spinner-default}/2));
 
-  &.small {
-    border-width: 3px;
-    height: $spinner-small;
-    width: $spinner-small;
-    top: calc(50% - (#{$spinner-small}/2));
-    left: calc(50% - (#{$spinner-small}/2));
-  }
+	&.small {
+		border-width: 3px;
+		height: $spinner-small;
+		width: $spinner-small;
+		top: calc(50% - (#{$spinner-small}/2));
+		left: calc(50% - (#{$spinner-small}/2));
+	}
 }
 
 .has-spinner {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: $zindex-spinner;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: $zindex-spinner;
 
-  &:after {
-    content: "";
-    @extend .dash-spinner;
-    position: absolute;
-  }
+	&:after {
+		content: "";
+		@extend .dash-spinner;
+		position: absolute;
+	}
 }
 
 .button.has-spinner {
-  pointer-events: none;
-  color: transparent !important;
-  position: relative;
-  &:hover,
-  &:active,
-  &:focus { color: transparent; }
+	pointer-events: none;
+	color: transparent !important;
+	position: relative;
 
-  &:after {
-    content: "";
-    @extend .dash-spinner;
-    border-width: 3px;
-    border-color: rgba($color-white, .15);
-    border-top-color: rgba($color-white, 1);
-    position: absolute;
-    height: $spinner-button;
-    width: $spinner-button;
-    top: calc(50% - (#{$spinner-button}/2));
-    left: calc(50% - (#{$spinner-button}/2));
-  }
+	&:hover,
+	&:active,
+	&:focus { color: transparent; }
+
+	&:after {
+		content: "";
+		@extend .dash-spinner;
+		border-width: 3px;
+		border-color: rgba($color-white, 0.15);
+		border-top-color: rgba($color-white, 1);
+		position: absolute;
+		height: $spinner-button;
+		width: $spinner-button;
+		top: calc(50% - (#{$spinner-button}/2));
+		left: calc(50% - (#{$spinner-button}/2));
+	}
 }
 
 @-webkit-keyframes rotation {
-  from { -webkit-transform: rotate(0deg); }
-  to { -webkit-transform: rotate(359deg); }
+	from { -webkit-transform: rotate(0deg); }
+
+	to { -webkit-transform: rotate(359deg); }
 }
 
 @-moz-keyframes rotation {
-  from { -moz-transform: rotate(0deg); }
-  to { -moz-transform: rotate(359deg); }
+	from { -moz-transform: rotate(0deg); }
+
+	to { -moz-transform: rotate(359deg); }
 }
 
 @-o-keyframes rotation {
-  from { -o-transform: rotate(0deg); }
-  to { -o-transform: rotate(359deg); }
+	from { -o-transform: rotate(0deg); }
+
+	to { -o-transform: rotate(359deg); }
 }
 
 @keyframes rotation {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(359deg); }
+	from { transform: rotate(0deg); }
+
+	to { transform: rotate(359deg); }
 }
