--- a/src/sass/modules/tags/tags.scss
+++ b/src/sass/modules/tags/tags.scss
@@ -23,11 +23,12 @@ $tag-default-color: $color-gray-2;
 	text-transform: capitalize;
 	text-decoration: none;
 	margin: 0.25rem;
+
 	&:not(.tag--no-link):hover,
 	&:not(.tag--no-link):focus {
 		border: 2px solid $color-blue;
 		color: $color-blue;
-		transition: border-color .1s ease-in-out;
+		transition: border-color 0.1s ease-in-out;
 		text-decoration: none;
 		opacity: 1;
 	}
@@ -39,32 +40,47 @@ $tag-default-color: $color-gray-2;
 #{$tags} {
 	@extend %tag;
 
-	&.tag--no-link  { opacity: 1; cursor: initial; }
+	&.tag--no-link  { opacity: 1;
+		cursor: initial; }
+
 	&.tag--large { font-size: $font-size-normal; }
 
 	&.tag--primary,
 	&.tag--blue   	  { @include tag--action($color: $color-blue) }
+
 	&.tag--secondary,
 	&.tag--gray,
 	&.tag--grey   	  { @include tag--action($color: $color-text) }
+
 	&.tag--green  	  { @include tag--action($color: $color-green) }
+
 	&.tag--orange 	  { @include tag--action($color: $color-orange) }
+
 	&.tag--purple 	  { @include tag--action($color: $color-purple) }
+
 	&.tag--red    	  { @include tag--action($color: $color-red) }
+
 	&.tag--white  	  { @include tag--action($color: $color-white) }
+
 	&.tag--black    	{ @include tag--action($color: $color-black) }
 }
 
 .tag--solid {
 	&.tag--primary,
 	&.tag--blue       { @include tag($tag-color: $color-blue, 		$color: $color-white) }
+
 	&.tag--secondary,
 	&.tag--grey,
 	&.tag--gray       { @include tag($tag-color: $tag-default-color, 	$color: $color-black) }
+
 	&.tag--green      { @include tag($tag-color: $color-green, 				$color: $color-white) }
+
 	&.tag--orange     { @include tag($tag-color: $color-orange, 			$color: $color-black) }
+
 	&.tag--purple     { @include tag($tag-color: $color-purple, 			$color: $color-white) }
+
 	&.tag--red        { @include tag($tag-color: $color-red,    			$color: $color-white) }
+
 	&.tag--white      { @include tag($tag-color: $color-white,    		$color: $color-black) }
 }
 
@@ -73,23 +89,30 @@ $tag-default-color: $color-gray-2;
 	display: inline-block;
 	background-color: transparent;
 
-	&.tag--no-link  { opacity: 1; cursor: initial; }
+	&.tag--no-link  { opacity: 1;
+		cursor: initial; }
 
 	#{$tag-hover-rules} {
 		//Default hover effects
 		border-color: $color-blue;
-		transition: border-color .1s ease-in-out;
+		transition: border-color 0.1s ease-in-out;
 
-  	&.tag--primary,
+		&.tag--primary,
 		&.tag--blue       { border-color: darken($color-blue, 20%); }
+
 		&.tag--secondary,
 		&.tag--grey,
 		&.tag--gray       { border-color: darken($tag-default-color, 20%); }
+
 		&.tag--green  	  { border-color: darken($color-green, 20%); }
+
 		&.tag--orange     { border-color: darken($color-orange, 20%); }
-		&.tag--purple     { border-color: darken($color-purple, 20%);; }
-		&.tag--red        { border-color: darken($color-red, 20%);; }
-		&.tag--white      { border-color: darken($color-white, 20%);; }
+
+		&.tag--purple     { border-color: darken($color-purple, 20%); }
+
+		&.tag--red        { border-color: darken($color-red, 20%); }
+
+		&.tag--white      { border-color: darken($color-white, 20%); }
 	}
 
 	.tag:first-child {
@@ -112,6 +135,7 @@ $tag-default-color: $color-gray-2;
 	}
 }
 
+/* stylelint-disable */
 //Example: Custom Tags
 .tag {//Basic
 	&.plan-11 {	@include tag($tag-color: $color-orange, $color: $color-black) }
@@ -152,3 +176,4 @@ $tag-default-color: $color-gray-2;
 		}
 	}
 }
+/* stylelint-enable */
